--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -1,10 +1,19 @@
+#-----------------------------------------------------------------------
+#
+#   applicaton-common : Default Common Configuation
+#   kubernetes PV(Persistent Volume) : /DATA  
+#    
+#-----------------------------------------------------------------------
+
 spring:
   config:
     activate:
       on-profile: local
 
 props:
-
+  common:
+    baseFilePath: /XXX/XXXX/DATA/
+    advehicleSwPath: files/advehicle_sw
   
 ---
  
@@ -14,7 +23,9 @@ spring:
       on-profile: dev
 
 props:
-
+  common:
+    baseFilePath: /DATA/
+    advehicleSwPath: files/advehicle_sw
  
 ---
  
@@ -24,4 +35,6 @@ spring:
       on-profile: prod
 
 props:
-
+  common:
+    baseFilePath: /DATA/
+    advehicleSwPath: files/advehicle_sw
