--- a/src/main/resources/application-ftp-client.yml
+++ b/src/main/resources/application-ftp-client.yml
@@ -1,3 +1,8 @@
+#-----------------------------------------------------------------------
+#
+#   applicaton-ftp-client : FTP Client Configuation 
+#   
+#-----------------------------------------------------------------------
 spring:
   config:
     activate:
